# cs225a-dist

./: .gitignore  CMakeLists.txt  README.md  install.sh  make.sh
src/controller/: CMakeLists.txt  controller.cpp  mico.urdf
src/controller_standalone/: CMakeLists.txt  controller_standalone.cpp  jaco.urdf  world_jaco.urdf  world_mico.urdf
src/simulation/: simulation_main.cpp
src/visualization/: visualizer_main.cpp
